# wimb

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  wimb.example.toml
scripts/: __init__.py  audit_route_154.py
src/wimb/: __init__.py  cli.py  client.py  config.py  deviation.py  errors.py  gtfs.py  models.py  presentation.py  progress.py  realtime.py  realtime_cache.py  service.py
src/wimb/web/: __init__.py  app.py  schemas.py
src/wimb/web/static/: app.js  index.html  styles.css
tests/: conftest.py  test_audit_route_154.py  test_deviation.py  test_gtfs.py  test_presentation.py  test_progress.py  test_realtime.py  test_realtime_cache.py  test_service.py  test_web_api.py
tests/fixtures/: calendar.txt  calendar_dates.txt  routes.txt  stop_times.txt  stops.txt  trips.txt
