[build-system]
requires = ["setuptools==75.8.2"]
build-backend = "setuptools.build_meta"

[project]
name = "wimb"
version = "0.1.0"
description = "Where Is My Bus? A factual schedule-deviation CLI for Golden Gate Transit route 154."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "gtfs-realtime-bindings==1.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy==1.15.0",
  "pytest==8.3.5",
  "ruff==0.9.10",
]

[project.scripts]
wimb = "wimb.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "scripts"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
